<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros_system_monitor</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="aaronray@mit.edu">aaron</maintainer>
  <license>GPL-3.0</license>

  <depend>ros_system_monitor_msgs</depend>
  <depend>python3-rich</depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
